[project]
name = "cema"
version = "0.1.0"
description = "Conda Environment MAnager, a library to execute code in isolated environments."
authors = [{name = "Arthur Masson", email = "arthur.masson@inria.fr"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psutil>=6.1.0",
    "pyyaml>=6.0.2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.9.6",
    "types-psutil>=6.1.0.20241221",
    "types-pyyaml>=6.0.12.20241230",
]

[tool.ruff]
max-line-length = 120
lint.ignore = ["E701", "F541"]
